# ShoeFrank

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  setupFOOT.csh.cmake  setupFOOT.sh.cmake  valgrind.csh
Analysis/: CMakeLists.txt
Analysis/TANAbase/: CMakeLists.txt  GlobalAana.cxx  GlobalAana.hxx  GlobalAna.cxx  GlobalAna.hxx  TANAactBaseNtu.cxx  TANAactBaseNtu.hxx  TANAactGSI2021.cxx  TANAactGSI2021.hxx  TANAactNtuMass.cxx  TANAactNtuMass.hxx  TANAactNtuSelectionCuts.cxx  TANAactNtuSelectionCuts.hxx  TANAactPtReso.cxx  TANAactPtReso.hxx  TANAbase.LinkDef.h
Analysis/TANLbase/: CMakeLists.txt  GlobalRecoMV.cxx  GlobalRecoMV.hxx  TANLAnalysisManager.cxx  TANLAnalysisManager.hxx  TANLBMAnalysis.cxx  TANLBMAnalysis.hxx  TANLBMVTmatchAnalysis.cxx  TANLBMVTmatchAnalysis.hxx  TANLBaseAnalysis.hxx  TANLVTAnalysis.cxx  TANLVTAnalysis.hxx  TANLbase.LinkDef.h  TANLbaseAnalysis.cxx  TANLbaseAnalysis.hxx
Analysis/TPGbase/: CMakeLists.txt  TPGSPlayer.cxx  TPGSPlayer.hxx  TPGbase.LinkDef.h  TPGbasePeak.cxx  TPGbasePeak.hxx  TPGpadManager.cxx  TPGpadManager.hxx  TPGpeak1D.cxx  TPGpeak1D.hxx  TPGpeakCreator.cxx  TPGpeakCreator.hxx  TPGspectrumCalib.cxx  TPGspectrumCalib.hxx  TPGspectrumCalibrator.cxx  TPGspectrumCalibrator.hxx  TPGspectrumPlayer.cxx  TPGspectrumPlayer.hxx  TPGspectrumPlayer.hxx_save
Ancillary/: CMakeLists.txt  DecodeMPix.cc  DecodePix.cc  DecodeWC.cc
Ancillary/TACEbase/: CMakeLists.txt  TACEactNtuHit.cxx  TACEactNtuHit.hxx  TACEbase.LinkDef.h  TACEdigitizer.cxx  TACEdigitizer.hxx  TACEntuHit.cxx  TACEntuHit.hxx  TACEntuRaw.cxx  TACEntuRaw.hxx  TACEparGeo.cxx  TACEparGeo.hxx  TACEwaveDisplay.cxx  TACEwaveDisplay.hxx  TAGactWCreader.cxx  TAGactWCreader.hxx  TAGbaseWCpar.hxx
Ancillary/TAMPbase/: CMakeLists.txt  TAMPactAscReader.cxx  TAMPactAscReader.hxx  TAMPactNtuCluster.cxx  TAMPactNtuCluster.hxx  TAMPalignC.cxx  TAMPalignC.hxx  TAMPbase.LinkDef.h  TAMPcluster.cxx  TAMPcluster.hxx  TAMPhit.cxx  TAMPhit.hxx  TAMPntuCluster.cxx  TAMPntuCluster.hxx  TAMPntuHit.cxx  TAMPntuHit.hxx  TAMPparConf.cxx  TAMPparConf.hxx  TAMPparGeo.cxx  TAMPparGeo.hxx  TAMPparMap.cxx  TAMPparMap.hxx
Ancillary/TANEbase/: CMakeLists.txt  TANEactNtuHit.cxx  TANEactNtuHit.hxx  TANEbase.LinkDef.h  TANEntuHit.cxx  TANEntuHit.hxx  TANEparGeo.cxx  TANEparGeo.hxx  TANEparMap.cxx
Ancillary/TAPLbase/: CMakeLists.txt  TAGbaseWC.cxx  TAGbaseWC.hxx  TAGbaseWCparMap.cxx  TAGbaseWCparMap.hxx  TAGwaveCatcher.cxx  TAGwaveCatcher.hxx  TAPLactBaseNtuHit.cxx  TAPLactBaseNtuHit.hxx  TAPLactNtuHit.cxx  TAPLactNtuHit.hxx  TAPLbase.LinkDef.h  TAPLdigitizer.cxx  TAPLdigitizer.hxx  TAPLntuHit.cxx  TAPLntuHit.hxx  TAPLntuRaw.cxx  TAPLntuRaw.hxx  TAPLparGeo.cxx  TAPLparGeo.hxx
Ancillary/TAPWbase/: CMakeLists.txt  TAPWactNtuHit.cxx  TAPWactNtuHit.hxx  TAPWbase.LinkDef.h  TAPWdigitizer.cxx  TAPWdigitizer.hxx  TAPWntuHit.cxx  TAPWntuHit.hxx  TAPWntuRaw.cxx  TAPWntuRaw.hxx  TAPWparGeo.cxx  TAPWparGeo.hxx
Ancillary/TAPXIbase/: CMakeLists.txt  TAGmi28DataFile.cxx  TAGmi28DataFile.hxx  TAGmi28InfoFile.cxx  TAGmi28InfoFile.hxx  TAGmi28ParFile.cxx  TAGmi28ParFile.hxx  TAGmi28PxiDaq.cxx  TAGmi28PxiDaq.hxx  TAPXIactReader.cxx  TAPXIactReader.hxx  TAPXIbase.LinkDef.h
Ancillary/macros/: DisplayWave.C  ReadMPix.C  ReadWC.C
G4Simulation/TCLINMbase/: CMakeLists.txt  TCLINMbaseEventAction.cxx  TCLINMbaseEventAction.hxx  TCLINMeventAction.cxx  TCLINMeventAction.hxx  TCLINMgeometryConstructor.cxx  TCLINMgeometryConstructor.hxx  TCLINMrunAction.cxx  TCLINMrunAction.hxx  TCLINMtrackingAction.cxx  TCLINMtrackingAction.hxx
Libraries/: CMakeLists.txt
Libraries/GenFit/: CMakeLists.txt
Libraries/TABMbase/: CMakeLists.txt  TABMactBaseNtuTrack.cxx  TABMactBaseNtuTrack.hxx  TABMactNtuHit.cxx  TABMactNtuHitMC.cxx  TABMactNtuHitMC.hxx  TABMactNtuRaw.cxx  TABMactNtuRaw.hxx  TABMactNtuTrack.cxx  TABMactNtuTrack.hxx  TABMactVmeReader.hxx  TABMbase.LinkDef.h  TABMdigitizer.cxx  TABMdigitizer.hxx  TABMhit.cxx  TABMhit.hxx  TABMntuRaw.cxx  TABMntuRaw.hxx  TABMntuTrack.cxx  TABMntuTrack.hxx  TABMparCal.cxx  TABMparCal.hxx  TABMparConf.cxx  TABMparConf.hxx  TABMparGeo.cxx  TABMparGeo.hxx  TABMparMap.cxx  TABMparMap.hxx  TABMrawHit.cxx  TABMrawHit.hxx  TABMtrack.cxx  TABMtrack.hxx  TABMvieTrackFOOT.cxx  TABMvieTrackFOOT.hxx
Libraries/TACAbase/: TACAactBaseNtuCluster.cxx  TACAactBaseNtuCluster.hxx  TACAactNtuCluster.hxx  TACAactNtuClusterP.cxx  TACAactNtuClusterP.hxx  TACAactNtuHit.cxx  TACAactNtuHitMC.cxx  TACAactNtuHitMC.hxx  TACAcalibrationMap.cxx  TACAcalibrationMap.hxx  TACAdigitizer.cxx  TACAdigitizer.hxx  TACAntuCluster.cxx  TACAntuCluster.hxx  TACAntuHit.cxx  TACAntuHit.hxx  TACAntuRaw.cxx  TACAntuRaw.hxx  TACAparCal.cxx  TACAparCal.hxx  TACAparConf.cxx  TACAparConf.hxx  TACAparGeo.cxx  TACAparGeo.hxx  TACAparMap.cxx  TACAparMap.hxx  TACAparameters.hxx  TAGactWDreader.cxx  TAGactWDreader.hxx  TAWDntuTrigger.hxx
Libraries/TADIbase/: CMakeLists.txt  TADIeveField.cxx  TADIeveTrackPropagator.hxx  TADIgenField.cxx  TADIparGeo.cxx  TADIparGeo.hxx  TADItrackEmProperties.cxx  TADItrackEmProperties.hxx  TADItrackPropagator.cxx  TADItrackPropagator.hxx
Libraries/TAEDbase/: CMakeLists.txt  TAEDbase.LinkDef.h  TAEDcluster.cxx  TAEDcluster.hxx  TAEDeveGlbTrackList.cxx  TAEDeveGlbTrackList.hxx  TAEDglbTrack.cxx  TAEDglbTrackGL.hxx  TAEDglbTrackList.hxx  TAEDpoint.cxx  TAEDtrack.hxx
Libraries/TAGFbase/: CMakeLists.txt  TAGF_KalmanStudies.cxx  TAGF_KalmanStudies.hxx  TAGFbase.LinkDef.h  TAGFdetectorMap.cxx  TAGFdetectorMap.hxx  TAGFgeometryConstructor.cxx  TAGFgeometryConstructor.hxx  TAGFselectorBack.cxx  TAGFselectorBack.hxx  TAGFselectorBase.cxx  TAGFselectorBase.hxx  (+13 more)
Reconstruction/: AnalyzeBmStd.cc  CMakeLists.txt  CalibrateBm.cc  CalibrateTof.cc  ConvertNtuple.cc  DecodeCA.cc  DecodeGlb.cc  DecodeGlbAna.cc  DecodeGlbAnalysis.cc  DecodeWD.cc  README  computeSTeff.C
Simulation/: CMakeLists.txt  MakeGeo.cxx  README  Txt2NtuRoot.cxx  Txt2Root.cxx  foot.flair  foot.geo  foot.inp  foot_geo.h  link_FOOT.sh  link_FOOT_mag.sh  link_FOOT_magnew.sh  link_FOOTdev.sh  link_FOOTdev_mag.sh  link_FOOTeff.sh  link_FOOTeff_dev.sh  link_FOOTnew.sh
(+2258 files in other folders)
