# CMake for FOOT
# Ch. Finck

#------------------------------------------------------------------------------
# Project Name 
#
project (Ancillary)
#
MESSAGE("${PROJECT_NAME}:")

#----------------------------------------------------------------------------
# SRC
#
add_subdirectory(TAPLbase)
add_subdirectory(TACEbase)
add_subdirectory(TANEbase)
